--- a/interbotix_ros_xseries/interbotix_xs_msgs/package.xml
+++ b/interbotix_ros_xseries/interbotix_xs_msgs/package.xml
@@ -9,19 +9,18 @@
   <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
   <license>BSD</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>message_generation</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>trajectory_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
+  <depend>std_msgs</depend>
+  <depend>trajectory_msgs</depend>
+  
+  <build_depend>rosidl_default_generators</build_depend>
 
-  <run_depend>message_runtime</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>trajectory_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
-    <architecture_independent/>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
