--- a/interbotix_ros_xseries/interbotix_xs_sdk/package.xml
+++ b/interbotix_ros_xseries/interbotix_xs_sdk/package.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>interbotix_xs_sdk</name>
   <version>0.0.0</version>
   <description>The interbotix_xs_sdk package</description>
@@ -10,37 +11,19 @@
 
   <!-- The *depend tags are used to specify dependencies -->
   <!-- Dependencies can be catkin packages or system dependencies -->
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>actionlib</build_depend>
-  <build_depend>control_msgs</build_depend>
-  <build_depend>dynamixel_workbench_toolbox</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>interbotix_xs_msgs</build_depend>
-  <build_depend>urdf</build_depend>
-  <build_depend>yaml-cpp</build_depend>
-  <build_export_depend>actionlib</build_export_depend>
-  <build_export_depend>control_msgs</build_export_depend>
-  <build_export_depend>dynamixel_workbench_toolbox</build_export_depend>
-  <build_export_depend>message_generation</build_export_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>sensor_msgs</build_export_depend>
-  <build_export_depend>interbotix_xs_msgs</build_export_depend>
-  <build_export_depend>urdf</build_export_depend>
-  <build_export_depend>yaml-cpp</build_export_depend>
-  <exec_depend>actionlib</exec_depend>
-  <exec_depend>control_msgs</exec_depend>
-  <exec_depend>dynamixel_workbench_toolbox</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>interbotix_xs_msgs</exec_depend>
-  <exec_depend>urdf</exec_depend>
-  <exec_depend>yaml-cpp</exec_depend>
-
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>control_msgs</depend>
+  <depend>dynamixel_workbench_toolbox</depend>
+  <depend>rclcpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>trajectory_msgs</depend>
+  <depend>urdf</depend>
+  <depend>yaml-cpp</depend>
+  <depend>xseries_msgs</depend>
+  <depend>backward_ros</depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
