add rclpy to dependencies

--- a/interbotix_ros_xseries/interbotix_xs_sdk/package.xml
+++ b/interbotix_ros_xseries/interbotix_xs_sdk/package.xml
@@ -15,6 +15,7 @@
   <depend>control_msgs</depend>
   <depend>dynamixel_workbench_toolbox</depend>
   <depend>rclcpp</depend>
+  <depend>rclpy</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>trajectory_msgs</depend>
