running on a real robot, changed traj exec timer

--- a/interbotix_ros_xseries/interbotix_xs_sdk/CMakeLists.txt
+++ b/interbotix_ros_xseries/interbotix_xs_sdk/CMakeLists.txt
@@ -63,7 +63,7 @@ install(PROGRAMS
   DESTINATION lib/${PROJECT_NAME}
 )
 install(DIRECTORY
-  launch config
+  config
   DESTINATION share/${PROJECT_NAME}/
 )
 ament_package()
