--- a/interbotix_ros_xseries/interbotix_xs_sdk/package.xml
+++ b/interbotix_ros_xseries/interbotix_xs_sdk/package.xml
@@ -17,8 +17,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>trajectory_msgs</build_depend>
+  <build_depend>interbotix_xs_msgs</build_depend>
   <build_depend>urdf</build_depend>
   <build_depend>yaml-cpp</build_depend>
   <build_export_depend>actionlib</build_export_depend>
@@ -27,8 +26,7 @@
   <build_export_depend>message_generation</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>trajectory_msgs</build_export_depend>
+  <build_export_depend>interbotix_xs_msgs</build_export_depend>
   <build_export_depend>urdf</build_export_depend>
   <build_export_depend>yaml-cpp</build_export_depend>
   <exec_depend>actionlib</exec_depend>
@@ -37,8 +35,7 @@
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>trajectory_msgs</exec_depend>
+  <exec_depend>interbotix_xs_msgs</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>yaml-cpp</exec_depend>
 
