[ros_xseries] Update ros_xseries to ROS2

--- a/interbotix_ros_xseries/interbotix_xs_msgs/CMakeLists.txt
+++ b/interbotix_ros_xseries/interbotix_xs_msgs/CMakeLists.txt
@@ -13,22 +13,28 @@ find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(trajectory_msgs REQUIRED)
 
- set (MSG_FILES
-   msg/JointGroupCommand.msg
-   msg/JointSingleCommand.msg
-   msg/JointTrajectoryCommand.msg
- )
+set (MSG_FILES
+  msg/ArmJoy.msg
+  msg/HexJoy.msg
+  msg/JointGroupCommand.msg
+  msg/JointSingleCommand.msg
+  msg/JointTemps.msg
+  msg/JointTrajectoryCommand.msg
+  msg/LocobotJoy.msg
+  msg/TurretJoy.msg
+)
 
 ## Generate services in the 'srv' folder
- set (SRV_FILES
-   srv/MotorGains.srv
-   srv/OperatingModes.srv
-   srv/Reboot.srv
-   srv/RegisterValues.srv
-   srv/RobotInfo.srv
-   srv/TorqueEnable.srv
- )
- rosidl_generate_interfaces(${PROJECT_NAME}
+set (SRV_FILES
+  srv/MotorGains.srv
+  srv/OperatingModes.srv
+  srv/Reboot.srv
+  srv/RegisterValues.srv
+  srv/RobotInfo.srv
+  srv/TorqueEnable.srv
+)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
   ${MSG_FILES}
   ${SRV_FILES}
  DEPENDENCIES std_msgs trajectory_msgs
