--- a/interbotix_ros_xseries/interbotix_xs_msgs/CMakeLists.txt
+++ b/interbotix_ros_xseries/interbotix_xs_msgs/CMakeLists.txt
@@ -1,50 +1,43 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(interbotix_xs_msgs)
 
-find_package(catkin REQUIRED COMPONENTS 
-    message_generation
-    std_msgs
-    trajectory_msgs
-    geometry_msgs
+if (NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
+
+if (CMAKE_COMPILER_IS_GNUXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
+find_package(rosidl_default_generators REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(trajectory_msgs REQUIRED)
+
+set (MSG_FILES
+  msg/ArmJoy.msg
+  msg/HexJoy.msg
+  msg/JointGroupCommand.msg
+  msg/JointSingleCommand.msg
+  msg/JointTemps.msg
+  msg/JointTrajectoryCommand.msg
+  msg/LocobotJoy.msg
+  msg/TurretJoy.msg
 )
 
-add_message_files(
-    FILES
-    JointGroupCommand.msg
-    JointSingleCommand.msg
-    JointTrajectoryCommand.msg
-    # xsarm_diagnostic_tool
-    JointTemps.msg
-    # xsarm_joy
-    ArmJoy.msg
-    #xshexapod_joy
-    HexJoy.msg
-    #xslocobot_joy
-    LocobotJoy.msg
-    #xsturret_joy
-    TurretJoy.msg
+## Generate services in the 'srv' folder
+set (SRV_FILES
+  srv/MotorGains.srv
+  srv/OperatingModes.srv
+  srv/Reboot.srv
+  srv/RegisterValues.srv
+  srv/RobotInfo.srv
+  srv/TorqueEnable.srv
 )
 
-add_service_files(
-    FILES
-    Reboot.srv
-    RobotInfo.srv
-    MotorGains.srv
-    TorqueEnable.srv
-    OperatingModes.srv
-    RegisterValues.srv
+rosidl_generate_interfaces(${PROJECT_NAME}
+  ${MSG_FILES}
+  ${SRV_FILES}
+ DEPENDENCIES std_msgs trajectory_msgs
 )
 
-generate_messages(
-    DEPENDENCIES
-    std_msgs
-    trajectory_msgs
-    geometry_msgs
-)
-
-catkin_package(
-    CATKIN_DEPENDS 
-    message_runtime 
-    std_msgs 
-    trajectory_msgs
-)
+ament_package()
