--- a/interbotix_ros_xseries/interbotix_xs_sdk/package.xml
+++ b/interbotix_ros_xseries/interbotix_xs_sdk/package.xml
@@ -4,14 +4,12 @@
   <name>interbotix_xs_sdk</name>
   <version>0.0.0</version>
   <description>The interbotix_xs_sdk package</description>
-  <maintainer email="trsupport@trossenrobotics.com">Solomon Wiznitzer</maintainer>
+  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
   <license>BSD</license>
-  <!-- <url type="website">http://wiki.ros.org/interbotix_xs_sdk</url> -->
-  <author email="solomon@trossenrobotics.com">Solomon Wiznitzer</author>
+  <author email="trsupport@trossenrobotics.com">Solomon Wiznitzer</author>
 
-  <!-- The *depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
   <buildtool_depend>ament_cmake</buildtool_depend>
+
   <depend>dynamixel_workbench_toolbox</depend>
   <depend>rclcpp</depend>
   <depend>rclpy</depend>
@@ -19,7 +17,10 @@
   <depend>urdf</depend>
   <depend>yaml-cpp</depend>
   <depend>interbotix_xs_msgs</depend>
-  <!-- The export tag contains other, unspecified, tags -->
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
