[xs_msgs] Add and enforce linting

--- a/interbotix_ros_xseries/interbotix_xs_msgs/CMakeLists.txt
+++ b/interbotix_ros_xseries/interbotix_xs_msgs/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.5)
 project(interbotix_xs_msgs)
 
-if (NOT CMAKE_CXX_STANDARD)
+if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
 endif()
 
-if (CMAKE_COMPILER_IS_GNUXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+if(CMAKE_COMPILER_IS_GNUXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
@@ -13,7 +13,7 @@ find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(trajectory_msgs REQUIRED)
 
-set (MSG_FILES
+set(MSG_FILES
   msg/ArmJoy.msg
   msg/HexJoy.msg
   msg/JointGroupCommand.msg
@@ -25,7 +25,7 @@ set (MSG_FILES
 )
 
 ## Generate services in the 'srv' folder
-set (SRV_FILES
+set(SRV_FILES
   srv/MotorGains.srv
   srv/OperatingModes.srv
   srv/Reboot.srv
@@ -37,7 +37,12 @@ set (SRV_FILES
 rosidl_generate_interfaces(${PROJECT_NAME}
   ${MSG_FILES}
   ${SRV_FILES}
- DEPENDENCIES std_msgs trajectory_msgs
+  DEPENDENCIES std_msgs trajectory_msgs
 )
+
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
 
 ament_package()
