--- a/interbotix_ros_xseries/interbotix_ros_xseries/package.xml
+++ b/interbotix_ros_xseries/interbotix_ros_xseries/package.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>interbotix_ros_xseries</name>
   <version>0.0.0</version>
   <description>The interbotix_ros_xseries metapackage</description>
@@ -12,6 +13,9 @@
   <exec_depend>dynamixel_workbench_toolbox</exec_depend>
   <exec_depend>interbotix_xs_msgs</exec_depend>
   <exec_depend>interbotix_xs_sdk</exec_depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
