--- a/.github/workflows/xs-galactic.yaml
+++ b/.github/workflows/xs-galactic.yaml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - galactic
+      - ros2-devel
   pull_request:
     branches:
       - galactic
+      - ros2-devel
   workflow_dispatch:
 
 defaults:
