--- a/interbotix_ros_xseries/interbotix_xs_sdk/package.xml
+++ b/interbotix_ros_xseries/interbotix_xs_sdk/package.xml
@@ -10,13 +10,13 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>dynamixel_workbench_toolbox</depend>
   <depend>rclcpp</depend>
   <depend>rclpy</depend>
   <depend>sensor_msgs</depend>
   <depend>urdf</depend>
   <depend>yaml-cpp</depend>
   <depend>interbotix_xs_msgs</depend>
+  <depend>interbotix_xs_driver</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
