--- a/.github/workflows/xs-galactic.yaml
+++ b/.github/workflows/xs-galactic.yaml
@@ -21,9 +21,9 @@ jobs:
       matrix:
         env:
           - {ROS_DISTRO: galactic, ROS_REPO: main}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
           path: src
