--- a/.github/workflows/xs-noetic.yaml
+++ b/.github/workflows/xs-noetic.yaml
@@ -21,9 +21,9 @@ jobs:
         env:
           - {ROS_DISTRO: noetic,  ROS_REPO: main, BUILDER: catkin_tools}
           - {ROS_DISTRO: noetic,  ROS_REPO: main, BUILDER: catkin_make}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
       - name: Create src directory for xs
         run: |
           rm interbotix_ros_xseries/CATKIN_IGNORE
