--- a/.gitmodules
+++ b/.gitmodules
@@ -5,4 +5,4 @@
 [submodule "interbotix_ros_xseries/interbotix_xs_driver"]
 	path = interbotix_ros_xseries/interbotix_xs_driver
 	url = https://github.com/Interbotix/interbotix_xs_driver.git
-	branch = ros2
+	branch = v0.3.0
