added gripper calibration

--- a/interbotix_ros_xseries/interbotix_xs_msgs/CMakeLists.txt
+++ b/interbotix_ros_xseries/interbotix_xs_msgs/CMakeLists.txt
@@ -33,6 +33,7 @@ add_service_files(
     TorqueEnable.srv
     OperatingModes.srv
     RegisterValues.srv
+    GripperCalib.srv
 )
 
 generate_messages(
