Added gripper calibration node

--- a/interbotix_ros_xseries/interbotix_xs_msgs/CMakeLists.txt
+++ b/interbotix_ros_xseries/interbotix_xs_msgs/CMakeLists.txt
@@ -32,6 +32,7 @@ set(SRV_FILES
   srv/RegisterValues.srv
   srv/RobotInfo.srv
   srv/TorqueEnable.srv
+  srv/GripperCalib.srv
 )
 
 rosidl_generate_interfaces(${PROJECT_NAME}
