--- a/.github/workflows/xs-rolling.yaml
+++ b/.github/workflows/xs-rolling.yaml
@@ -24,6 +24,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
-          path: src
+          path: src/interbotix_ros_core
+      - name: Prepare Workspace
+        run: |
+          rm src/interbotix_ros_core/interbotix_ros_xseries/COLCON_IGNORE
       - uses: 'ros-industrial/industrial_ci@master'
         env: ${{matrix.env}}
