--- a/.github/workflows/slate-humble.yaml
+++ b/.github/workflows/slate-humble.yaml
@@ -22,6 +22,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        with:
           path: src/interbotix_ros_core
       - name: Prepare Workspace
         run: |
