Update ROS 1 CI (#36)
* Remove melodic CI

* Only trigger xs, slate CI on updates to xs, slate

* Update noetic checkout to v4

--- a/.github/workflows/xs-noetic.yaml
+++ b/.github/workflows/xs-noetic.yaml
@@ -2,10 +2,16 @@ name: build-xs-noetic
 
 on:
   push:
+    paths-ignore:
+      - 'interbotix_ros_slate/**'
+      - 'interbotix_ros_uxarms/**'
     branches:
       - main
       - devel
   pull_request:
+    paths-ignore:
+      - 'interbotix_ros_slate/**'
+      - 'interbotix_ros_uxarms/**'
     branches:
       - main
       - devel
@@ -24,7 +30,7 @@ jobs:
           - {ROS_DISTRO: noetic,  ROS_REPO: main, BUILDER: catkin_make}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v4
       - name: Create src directory for xs
         run: |
           rm interbotix_ros_xseries/CATKIN_IGNORE
