Add SLATE Base ROS 2 Drivers (#35)
* [ros_slate] Add the Interbotix Slate ROS 2 driver

* Reconfigure base services

* Don't install launch directory

* Remove unneeded install directive

* Lint

* Add logging to service callbacks

* Return service success

* Swap base_node and base files

* Add COLCON_IGNORE to ros_xseries

* Update SLATE driver function docstrings

* Update some language in SLATE base node

* Add SLATE base humble workflow

* Modify ROS 2 workflows to remove new COLCON_IGNORE

* Fix workflow syntax

* Remove broken dependency

* Fix xs-humble CI steps

* Revert change to galactic workflow

--- a/.github/workflows/slate-humble.yaml
+++ b/.github/workflows/slate-humble.yaml
@@ -1,4 +1,4 @@
-name: build-xs-humble
+name: build-slate-humble
 
 on:
   push:
@@ -14,19 +14,18 @@ defaults:
     shell: bash
 
 jobs:
-  xs-humble:
+  slate-humble:
     strategy:
       matrix:
         env:
           - {ROS_DISTRO: humble, ROS_REPO: main}
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
-          submodules: recursive
           path: src/interbotix_ros_core
       - name: Prepare Workspace
         run: |
-          rm src/interbotix_ros_core/interbotix_ros_xseries/COLCON_IGNORE
+          rm src/interbotix_ros_core/interbotix_ros_slate/COLCON_IGNORE
       - uses: 'ros-industrial/industrial_ci@master'
         env: ${{matrix.env}}
