--- a/interbotix_ros_common_drivers/interbotix_ros_footswitch/interbotix_footswitch_driver/package.xml
+++ b/interbotix_ros_common_drivers/interbotix_ros_footswitch/interbotix_footswitch_driver/package.xml
@@ -15,6 +15,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>interbotix_footswitch_msgs</depend>
+  <depend>rclcpp_components</depend>
+  <depend>rclcpp</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
