Update xs-humble dependencies

--- a/.github/workflows/xs-humble.yaml
+++ b/.github/workflows/xs-humble.yaml
@@ -31,7 +31,7 @@ jobs:
           rm src/interbotix_ros_core/interbotix_ros_xseries/COLCON_IGNORE
       - name: Install Dependencies
         run: |
-          sudo apt-get install pkg-config
+          sudo apt-get install pkg-config cmake-data
       - uses: 'ros-industrial/industrial_ci@master'
         with:
           config: ${{toJSON(matrix.env)}}
