--- a/.github/workflows/xs-humble.yaml
+++ b/.github/workflows/xs-humble.yaml
@@ -27,7 +27,7 @@ jobs:
           path: src/interbotix_ros_core
       - name: Prepare Workspace
         run: |
-          rm src/interbotix_ros_core/interbotix_ros_common_drivers/COLCON_IGNORE
+          # rm src/interbotix_ros_core/interbotix_ros_common_drivers/COLCON_IGNORE
           rm src/interbotix_ros_core/interbotix_ros_xseries/COLCON_IGNORE
       - name: Install Dependencies
         run: |
