--- a/interbotix_ros_slate/interbotix_slate_driver/package.xml
+++ b/interbotix_ros_slate/interbotix_slate_driver/package.xml
@@ -13,6 +13,7 @@
 
   <depend>geometry_msgs</depend>
   <depend>interbotix_slate_msgs</depend>
+  <depend>libudev-dev</depend>
   <depend>nav_msgs</depend>
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
