Add set_light_state service

--- a/interbotix_ros_slate/interbotix_slate_msgs/CMakeLists.txt
+++ b/interbotix_ros_slate/interbotix_slate_msgs/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 
 set(SRV_FILES
+  srv/SetLightState.srv
   srv/SetString.srv
 )
 
